--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
+    "date-fns": "^2.29.1",
     "react": "18.0.0",
     "react-native": "0.69.3",
     "react-native-safe-area-context": "^4.3.1",
