--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-navigation/native": "^6.0.11",
     "add": "^2.0.6",
     "date-fns": "^2.29.1",
+    "lodash": "^4.17.21",
     "react": "18.0.0",
     "react-native": "0.69.3",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-svg": "^12.4.3",
+    "victory-native": "^36.5.3",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.182",
     "@types/react-native": "^0.69.3",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
